src/styles/global.css
@import "tailwindcss";
@import "tailwind-animations";

@property --count {
  syntax: "<integer>";
  initial-value: 0;
  inherits: false;
}

@theme {
  --max-width: 1564px;

  /* Animations */
  --animate-hero-scale: hero-scale linear both;
  --animate-integrations-flip: flip-horizontal 5s ease-in-out infinite alternate;
  --animate-curtain-reveal: curtain-reveal 1.2s cubic-bezier(0.76, 0, 0.24, 1) 2.2s forwards;
  --animate-curtain-counter: curtain-counter 2s cubic-bezier(0.85, 0, 0.15, 1) forwards;

  @keyframes curtain-reveal {
    0% {
      clip-path: inset(0% 0% 0% 0%);
      transform: scale(1);
      visibility: visible;
    }
    100% {
      clip-path: inset(0% 0% 100% 0%);
      transform: scale(1.05);
      visibility: hidden;
    }
  }

  @keyframes curtain-counter {
    0% {
      --count: 0;
    }
    100% {
      --count: 100;
    }
  }

  @keyframes hero-scale {
    from {
      transform: scale(0.9) translateY(-5%);
    }
    to {
      transform: scale(1) translateY(0%);
    }
  }

  @keyframes flip-horizontal {
    0% {
      transform: rotateY(0deg);
    }
    100% {
      transform: rotateY(360deg);
    }
  }
}

@theme inline {
  --font-sans: var(--font-dm-sans);
}

@custom-variant supports-scroll-timeline {
  @supports (animation-timeline: scroll()) {
    @slot;
  }
}

@custom-variant supports-view-timeline {
  @supports (animation-timeline: view()) {
    @slot;
  }
}

@utility bg-glass {
  @apply bg-[#141414]/20 backdrop-blur-md;
}

@layer base {
  :root {
    interpolate-size: allow-keywords;
  }

  html {
    scrollbar-width: thin;
    scrollbar-gutter: stable;
    scrollbar-color: gray transparent;
    @apply scroll-pt-32 scroll-smooth;
  }

  :is(h1, h2, h3, h4, h5, h6) {
    @apply font-medium text-balance;
  }
}

@layer components {
  .btn-primary {
    @apply border-neutral-50 bg-neutral-50 text-neutral-950;
  }

  .btn-secondary {
    @apply border-neutral-950 bg-neutral-950 text-neutral-50;
  }
}

